--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,8 @@
 * {
   font-family: "Roboto", sans-serif;
   font-style: normal;
+  scrollbar-width: thin;
+  scrollbar-color: white black;
 }
 
 /* LOGIN LARGE BG -*/
@@ -104,4 +106,27 @@
     background: linear-gradient(260deg, #0000002a 10%, #fff 100%);
     z-index: -2;
   }
+}
+
+/* SCROLL BAR ------------------- */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  border: 3px solid black;
+  border-radius: 20px;
+}
+
+/* For Firefox */
+
+/* For Internet Explorer and legacy Edge */
+.scrollbar-element {
+  -ms-overflow-style: scrollbar;
 }
